force-app/main/default/objects/SD_Contractor_PIR__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>SD_Sub_Area__r.SD_Area__r.Name</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Sync__c</fullName>
        <label>Close (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Order__c</fullName>
        <formula>IF(TEXT(Month__c) = &apos;January&apos;, 1 ,
IF(TEXT(Month__c) = &apos;February&apos;, 2 ,
IF(TEXT(Month__c) = &apos;March&apos;, 3 ,
IF(TEXT(Month__c) = &apos;April&apos;, 4 ,
IF(TEXT(Month__c) = &apos;May&apos;, 5 ,
IF(TEXT(Month__c) = &apos;June&apos;, 6 ,
IF(TEXT(Month__c) = &apos;July&apos;, 7 ,
IF(TEXT(Month__c) = &apos;August&apos;, 8 ,
IF(TEXT(Month__c) = &apos;September&apos;, 9 ,
IF(TEXT(Month__c) = &apos;October&apos;, 10 ,
IF(TEXT(Month__c) = &apos;November&apos;, 11 ,
IF(TEXT(Month__c) = &apos;December&apos;, 12, 0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIR_Sync__c</fullName>
        <label>PIR (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIR_Type__c</fullName>
        <label>PIR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unsafe Act</fullName>
                </value>
                <value>
                    <fullName>Unsafe Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIR__c</fullName>
        <label>PIR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>SD_Company__c</referenceTo>
        <relationshipLabel>Contractor PIR</relationshipLabel>
        <relationshipName>Contractor_PIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <referenceTo>SD_Contractor__c</referenceTo>
        <relationshipLabel>Contractor PIR</relationshipLabel>
        <relationshipName>Contractor_PIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Sub_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Area</label>
        <referenceTo>SD_Sub_Area__c</referenceTo>
        <relationshipLabel>Contractor PIR</relationshipLabel>
        <relationshipName>Contractor_PIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>SD_Zone__c</referenceTo>
        <relationshipLabel>Contractor PIR</relationshipLabel>
        <relationshipName>Contractor_PIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Contractor PIR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>SD_Contractor__c</columns>
        <columns>SD_Zone__c</columns>
        <columns>SD_Company__c</columns>
        <columns>PIR_Type__c</columns>
        <columns>PIR__c</columns>
        <columns>Close__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Month</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>SD_Company__c</columns>
        <columns>Area__c</columns>
        <columns>SD_Sub_Area__c</columns>
        <columns>SD_Zone__c</columns>
        <columns>SD_Contractor__c</columns>
        <columns>PIR_Type__c</columns>
        <columns>PIR__c</columns>
        <columns>Close__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>September</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>Current Month</label>
    </listViews>
    <listViews>
        <fullName>Current_Year</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>SD_Company__c</columns>
        <columns>Area__c</columns>
        <columns>SD_Sub_Area__c</columns>
        <columns>SD_Zone__c</columns>
        <columns>SD_Contractor__c</columns>
        <columns>PIR_Type__c</columns>
        <columns>PIR__c</columns>
        <columns>Close__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>Current Year</label>
    </listViews>
    <nameField>
        <label>Contractor PIR Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>